Simple product UI

--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -5,6 +5,6 @@
         <h1>Weight Reductor</h1>
         <br>
         <input type="button" onclick="location.href='products';" value="Products" />
-        <input type="button" onclick="location.href='error';" value="Error" />
+        <input type="button" onclick="location.href='crash';" value="Crash" />
     </body>
 </html>
