--- a/src/main/resources/templates/products/allProducts.html
+++ b/src/main/resources/templates/products/allProducts.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <link rel="stylesheet" th:href="@{/resources/css/product.css}"/>
+    </head>
     <body>
         <h1>All Products</h1>
         <table>
