--- a/src/main/resources/templates/products/allProducts.html
+++ b/src/main/resources/templates/products/allProducts.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <link rel="stylesheet" th:href="@{/resources/css/product.css}"/>
-    </head>
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'products')}">
     <body>
         <h1>All Products</h1>
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Name</th>
