--- a/src/main/resources/templates/products/addProduct.html
+++ b/src/main/resources/templates/products/addProduct.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'addProduct')}">
     <body>
-        <h1>Add Product</h1>
-
+        <h2>Add Product</h2>
         <form th:object="${product}" class="form-horizontal" method="post">
-            <div>
+            <div class="form-group has-feedback">
                 <input th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Protein', 'protein', 'text')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Carbs', 'carbs', 'text')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Fat', 'fat', 'text')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Protein', 'protein', 'number')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Carbs', 'carbs', 'number')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Fat', 'fat', 'number')}"/>
             </div>
-            <div>
-                <button class="btn btn-default" type="submit">Add Product</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button th:with="text=${product['new']} ? 'Add Product' : 'Update Product'" class="btn btn-default"
+                            type="submit" th:text="${text}">Add Product
+                    </button>
+                </div>
             </div>
         </form>
     </body>
 </html>
-<!--th:href="@{/resources/css/product.css}"-->
