--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -63,7 +63,7 @@
                             <span>Add a product</span>
                         </li>
 
-                        <li th:replace="::menuItem ('/crash','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
+                        <li th:replace="::menuItem ('/crash','crash','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
                             <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
                             <span>Error</span>
                         </li>
