Prepare new page for figma design

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -68,6 +68,10 @@
                             <span>Error</span>
                         </li>
 
+                        <li th:replace="::menuItem ('/design','design','New design','education','New design')">
+                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span>
+                            <span>Error</span>
+                        </li>
                     </ul>
                 </div>
             </div>
