Separate old menu item to another html file

--- a/src/main/resources/templates/design/design.html
+++ b/src/main/resources/templates/design/design.html
@@ -9,23 +9,18 @@
         <title>New Design</title>
 
         <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}"/>
+
         <link rel="stylesheet" th:href="@{/resources/css/design.css}"/>
 
         <script type="text/javascript" th:src="@{/resources/js/utils.js}"></script>
     </head>
     <body>
 
-        <h1>nowy kolor</h1>
+        <div class="drawer">
+            <p class="drawer-text drawer-text-section">Weight Reductor</p>
 
 
-
-
-
-
-
-
-
-
+        </div>
 
 
 
