--- a/src/main/resources/static/resources/css/design.css
+++ b/src/main/resources/static/resources/css/design.css
@@ -1,3 +1,73 @@
 body {
-  background-color: lightblue;
+    background-color: #E5E5E5;
+}
+
+.drawer {
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+
+    display: flex;
+    flex-direction: column;
+
+    background: linear-gradient(95.57deg, #000000 0%, #1250EF 100%), linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(180deg, #323B41 0%, #1F262A 100%);
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+}
+
+.drawer-text {
+    color: white;
+}
+
+.drawer-text-section {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+
+@font-face {
+    font-family: 'montserratregular';
+    src: url('../fonts/montserrat-webfont.eot');
+    src: url('../fonts/montserrat-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/montserrat-webfont.woff') format('woff'), url('../fonts/montserrat-webfont.ttf') format('truetype'), url('../fonts/montserrat-webfont.svg#montserratregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body,
+h1,
+h2,
+h3,
+p,
+input {
+    margin: 0;
+    font-weight: 400;
+    font-family: "montserratregular", sans-serif;
+    color: #34302d;
+}
+
+h1 {
+    font-size: 24px;
+    line-height: 30px;
+    font-family: "montserratregular", sans-serif;
+}
+
+h2 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 10px;
+    font-family: "montserratregular", sans-serif;
+}
+
+h3 {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+strong {
+    font-weight: 700;
+    font-family: "montserratregular", sans-serif;
 }
