--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -39,36 +39,27 @@
                 <div class="navbar-collapse collapse" id="main-navbar">
                     <ul class="nav navbar-nav navbar-right">
 
-                        <li th:fragment="menuItem (path,active,title,glyph,text)" class="active"
-                            th:class="${active==menu ? 'active' : ''}">
-                            <a th:href="@{__${path}__}" th:title="${title}">
-                        <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home"
-                              aria-hidden="true"></span>
-                                <span th:text="${text}">Template</span>
-                            </a>
-                        </li>
-
-                        <li th:replace="::menuItem ('/','home','home page','home','Home')">
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/','home','home page','home','Home')}">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                             <span>Home</span>
                         </li>
 
-                        <li th:replace="::menuItem ('/products','products','All products','search','All products')">
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/products','products','All products','search','All products')}">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             <span>All products</span>
                         </li>
 
-                        <li th:replace="::menuItem ('/products/add','addProduct','Add a product','plus','Add a product')">
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/products/add','addProduct','Add a product','plus','Add a product')}">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                             <span>Add a product</span>
                         </li>
 
-                        <li th:replace="::menuItem ('/crash','crash','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/crash','crash','trigger a RuntimeException to see how it is handled','warning-sign','Error')}">
                             <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
                             <span>Error</span>
                         </li>
 
-                        <li th:replace="::menuItem ('/design','design','New design','education','New design')">
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/design','design','New design','education','New design')}">
                             <span class="glyphicon glyphicon-education" aria-hidden="true"></span>
                             <span>Error</span>
                         </li>
