--- a/src/main/resources/static/resources/css/design.css
+++ b/src/main/resources/static/resources/css/design.css
@@ -1,26 +1,69 @@
-body {
-    background-color: #E5E5E5;
+html {
+    height: 100%;
 }
 
-.drawer {
-    position: absolute;
-    width: 300px;
+body {
+    background-color: #E5E5E5;
+    height: 100%;
+    overflow: hidden;  /*makes the body non-scrollable (we will add scrolling to the sidebar and main content containers)*/
+    margin: 0;  /*removes default style*/
+    display: flex;  /*enables flex content for its children*/
+    box-sizing: border-box;
+}
+
+.column {
+    height: 100%;  /*allows both columns to span the full height of the browser window*/
+    display: flex;
+    flex-direction: column;  /*places the left and right headers above the bottom content*/
+}
+
+#nav-column {
+    flex-shrink: 0;  /*makes sure that content is not cut off in a smaller browser window*/
+}
+
+.nav-header {
+    flex-shrink: 0;
+}
+
+.page-header {
+    flex-shrink: 0;
+    display: inline-flex;
+}
+
+ul {
+    display: inline-flex;
+    list-style: none;
+}
+
+.column-content {
+    flex-grow: 1;  /*ensures that the container will take up the full height of the parent container*/
+}
+
+.column-content-scrollable {
+    overflow-y: auto;  /*adds scroll to this container*/
+}
+
+.page-container {
+    background: #2b542c;
+}
+
+.navigation {
     height: 100%;
     left: 0px;
     top: 0px;
 
-    display: flex;
-    flex-direction: column;
+    width: min-content;
+    padding: 30px;
 
     background: linear-gradient(95.57deg, #000000 0%, #1250EF 100%), linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(180deg, #323B41 0%, #1F262A 100%);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
 }
 
-.drawer-text {
+.navigation-text {
     color: white;
 }
 
-.drawer-text-section {
+.navigation-text-section {
     font-weight: bold;
     text-transform: uppercase;
 }
