Added navigation items

--- a/src/main/resources/templates/fragments/designlayout.html
+++ b/src/main/resources/templates/fragments/designlayout.html
@@ -26,7 +26,13 @@
                 <div class="nav-header"></div>
                 <div class="column-content">
                     <div class="navigation">
-                        <p class="navigation-text navigation-text-section">Weight Reductor</p>
+
+                        <p class="navigation-text navigation-title">Weight Reductor</p>
+
+                        <a th:href="@{/}" class="navigation-item navigation-text">Home</a>
+                        <a th:href="@{/products}" class="navigation-item navigation-text">All Products</a>
+                        <a th:href="@{/products/add}" class="navigation-item navigation-text">Add a Product</a>
+                        <a th:href="@{/crash}" class="navigation-item navigation-text">Crash</a>
                     </div>
                 </div>
             </div>
