--- a/src/main/resources/static/resources/css/design.css
+++ b/src/main/resources/static/resources/css/design.css
@@ -49,23 +49,31 @@ ul {
 
 .navigation {
     height: 100%;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
 
     width: min-content;
     padding: 30px;
 
     background: linear-gradient(95.57deg, #000000 0%, #1250EF 100%), linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(180deg, #323B41 0%, #1F262A 100%);
-    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+    box-shadow: 0 10px 50px rgba(0, 0, 0, 0.04);
+}
+
+.navigation-item {
+
 }
 
 .navigation-text {
     color: white;
 }
 
-.navigation-text-section {
+.navigation-title {
     font-weight: bold;
     text-transform: uppercase;
+    white-space: nowrap;
+    margin-bottom: 30px;
 }
 
 
