New flexbox menu early template

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'crash')}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/designlayout :: designlayout (~{::body},'crash')}">
     <body>
         <h1>Error Page</h1>
         <table class="table table-striped">
