--- a/src/main/resources/templates/home/designhome.html
+++ b/src/main/resources/templates/home/designhome.html
@@ -1,94 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/designlayout :: designlayout (~{::body},'home')}">
     <body>
-        <div class="design-home">
+        <div>
             <div class="col-md-3"><img class="img-responsive" src=""
                                        style="max-height: 84px; width: 84px;"
                                        th:src="@{/resources/images/github-cyan.svg}"/></div>
             <h1>Weight Reductor</h1>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
-            <h3>New Design Home page</h3>
             <h3>New Design Home page</h3>
         </div>
     </body>
