Migration to new design, deleted old files

--- a/src/main/resources/templates/fragments/menuItem.html
+++ b/src/main/resources/templates/fragments/menuItem.html
@@ -10,3 +10,36 @@
         </li>
     </body>
 </html>
+
+
+<!--
+Do something similar with my menuItem to check current item
+
+USAGE:
+
+
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/','home','home page','home','Home')}">
+                            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                            <span>Home</span>
+                        </li>
+
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/products','products','All products','search','All products')}">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            <span>All products</span>
+                        </li>
+
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/products/add','addProduct','Add a product','plus','Add a product')}">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            <span>Add a product</span>
+                        </li>
+
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/crash','crash','trigger a RuntimeException to see how it is handled','warning-sign','Error')}">
+                            <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                            <span>Error</span>
+                        </li>
+
+                        <li th:replace="~{fragments/menuItem ::menuItem ('/design','design','New design','education','New design')}">
+                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span>
+                            <span>Error</span>
+                        </li>
+-->
