--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="designlayout (template, menu)">
+<html th:fragment="rootLayout (template, menu)">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta charset="utf-8"/>
