--- a/src/main/resources/templates/products/allProducts.html
+++ b/src/main/resources/templates/products/allProducts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/designlayout :: designlayout (~{::body},'products')}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'allProducts')}">
     <body>
         <h1>All Products</h1>
         <table class="table table-striped">
