--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'crash')}">
     <body>
         <h1>Error Page</h1>
-        <table class="table table-striped">
+        <table class="table">
             <tr>
                 <td>Date</td>
                 <td th:text="${timestamp}"/>
