--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -23,22 +23,29 @@
 
     <body>
         <div class="container">
-            <div id="header">
-                <div id="headerContent">
+
+            <div id="header-container">
+                <div id="header-content">
                     Desktop
                 </div>
             </div>
 
-            <div id="page">
-                <div id="sideBar">
+            <div id="sidebar-and-content-container">
+                <div id="sidebar-container">
                     <div class="sidebar-text sidebar-title">Weight Reductor</div>
                     <a th:href="@{/}" class="sidebar-text">Home</a>
                     <a th:href="@{/products}" class="sidebar-text">All Products</a>
                     <a th:href="@{/products/add}" class="sidebar-text">Add a Product</a>
                     <a th:href="@{/crash}" class="sidebar-text">Crash</a>
                 </div>
-                <div id="content">
+                <div id="content-container">
                     <th:block th:include="${template}"/>
+                </div>
+            </div>
+
+            <div id="footer-container">
+                <div id="footer-content">
+                    Weight Reductor 2020
                 </div>
             </div>
         </div>
