--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -6,7 +6,7 @@
                                        style="max-height: 84px; width: 84px;"
                                        th:src="@{/resources/images/github-cyan.svg}"/></div>
             <h1>Weight Reductor</h1>
-            <h3>New Design Home page</h3>
+            <h3>New Design Home Page</h3>
         </div>
     </body>
 </html>
