--- a/src/main/resources/templates/products/allProducts.html
+++ b/src/main/resources/templates/products/allProducts.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'allProducts')}">
     <body>
-        <h1>All Products</h1>
-        <table class="table table-striped">
+        <h1 class="page-title">All Products</h1>
+        <table class="table">
             <thead>
                 <tr>
                     <th>Name</th>
