--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -24,7 +24,7 @@
 
             <div id="header-container">
                 <div id="header-content">
-                    best
+                    Buy premium pls
                 </div>
             </div>
 
